fix: align usernames in the center

--- a/my-react-app/src/Components/AdminCard/Admin.css
+++ b/my-react-app/src/Components/AdminCard/Admin.css
@@ -27,14 +27,15 @@
     padding: 5px 15px;
     color: red;
     font-weight: bold;
-    margin-top: 2px;
+    margin-top: 1px;
 }
 
-.userId{
-    text-align: center;
-    margin: auto;
-    display: block;
+.userId {
     font-weight: bold;
+    flex-grow: 1; 
+    text-align: center; 
+    margin-left: -70px;
+    margin-top: 5px;
 }
 
 .remove-user-btn {
@@ -130,13 +131,15 @@
     }
     .reports {
         margin: 10px 0;
+        padding: 10px;
     }
     .report-count {
         margin-bottom: 10px;
         margin-left: -5px;
     }
     .userId {
-        margin-left: 15px;
+        margin-left: -30px;
+        padding: 15px;
     }
     .post-bar {
         flex-direction: column; 
